--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,6 +18,8 @@
 
     <label>Регистрация/вход</label> <input type="text">
 
+    <button routerLink="/addCocteil" routerLinkActive="active">Добавить коктейль</button>
+
   </div>
 
 
