--- a/src/app/cocteil.component.html
+++ b/src/app/cocteil.component.html
@@ -16,7 +16,7 @@
 <hr>
 
 <div *ngFor="let cocteil of cocteilIngred">
-  {{cocteil?.ingredient}}
+  {{cocteil?.name_of_ingredient}}
   {{cocteil?.volum}}
 </div>
 
