--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,1 +1,28 @@
+#table{
+  height: 100vh;
+  width: 100%;
+}
 
+.logoConteiner{
+  width: auto;
+  height: 20%;
+  margin-top: 0%;
+}
+
+#logo{
+  font-size: 300%;
+  color: whitesmoke;
+  font-family: Algerian;
+  text-align: center;
+  vertical-align: middle;
+  margin-bottom: 0%;
+  margin-top: 0%;
+  cursor: default;
+  user-select: none;
+}
+
+#battons {
+  width: auto;
+  height: 3%;
+  vertical-align: middle;
+}
