--- a/src/app/popCocteil/popCocteil.html
+++ b/src/app/popCocteil/popCocteil.html
@@ -19,17 +19,22 @@
   <div id="imageDiv">
 
     <div id="like">
+      <div id="wineglass">
 
-      <div id="triangle">
-        <div id="textAtLike">
-          <p class="textForLike" (click)="addLike()"> {{cocteil?.like_of_cocteil}} </p>
+        <div id="triangle">
+          <div id="textAtLike">
+            <p class="textForLike" (click)="addLike()"> {{cocteil?.like_of_cocteil}} </p>
+          </div>
         </div>
+        <div id="rectanglVerticale"></div>
+        <div id="rectanglHorizontal"></div>
+
       </div>
-      <div id="rectanglVerticale"></div>
-      <div id="rectanglHorizontal"></div>
 
+      <div class="commentForLike">
+        <p id="comment">Нравится</p>
+      </div>
     </div>
-
 
   </div>
 
