--- a/src/app/popCocteil/popCocteil.css
+++ b/src/app/popCocteil/popCocteil.css
@@ -1,7 +1,7 @@
 .nameDiv{
   width: auto;
   height: 6%;
-  margin-top: 0%;
+  margin-top: 0;
 }
 
 #infoOfCocteil{
@@ -40,3 +40,7 @@
   border-radius: 10px;
   padding: 10px;
 }
+
+
+
+
