--- a/src/styles.css
+++ b/src/styles.css
@@ -2,9 +2,8 @@
 body{
   background: url("1.jpg") no-repeat;
   background-size: cover;
+  background-color: black;
 }
-
-
 
 .nameCocteil{
   font-size: 250%;
@@ -13,7 +12,7 @@ body{
   text-align: center;
   vertical-align: middle;
   margin-bottom: 0%;
-  margin-top: 0%;
+  margin-top: -14px;
 }
 
 .textForCocteil{
@@ -29,13 +28,13 @@ body{
 }
 
 .textForBatton{
+  height: auto;
+  width: auto;
   color: #000000;
   text-align: center;
   font-size: 120%;
-  padding-top: 0%;
-  margin-top: 0;
-  margin-bottom: 0;
-  padding-top: 2px;
+  margin: 0;
+  padding: 1px;
 }
 
 .textForLike{
@@ -48,7 +47,8 @@ body{
   text-align: center;
 }
 
-#like{
+#wineglass{
+  height: 82px;
   float: right;
   margin-right: 3%;
   margin-top: 3%;
@@ -82,8 +82,31 @@ body{
   user-select: none;
 }
 
+.commentForLike{
+  display:none;
+  width: auto;
+  height: auto;
+  margin-top: 70px;
+  background: whitesmoke;
+  float: right;
+}
+
+#comment {
+  margin: 0;
+  padding: 2px;
+}
+
 #triangle:hover{
-  background: chocolate;
+  background: saddlebrown;
+}
+
+#like:hover .commentForLike{
+  display:block;
+}
+
+#like{
+  width: auto;
+  height: auto;
 }
 
 #triangle:hover .textForLike{
@@ -91,28 +114,31 @@ body{
   color: whitesmoke;
 }
 
+
 .CocteilBatton {
   width: auto;
   height: 100%;
   background-color: #f5f5f5;
   opacity: .7;
-  border-radius: 16% 16% 16% 16%/60% 60% 60% 60%;
+  border-radius: 15px;
   cursor: default;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  vertical-align: middle;
-  float: left;
-  margin-left: 1%;
-  padding-left: 1%;
-  padding-right: 1%;
+}
+
+.arealForTextBotton{
+  width: auto;
+  height: 100%;
+  text-align: center;
 }
 
 .CocteilBatton:focus{
   outline: none;
 }
 
-#CocteilBatton:hover{
+.CocteilBatton:hover{
   opacity: 1;
 }
+
