--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -48,23 +48,7 @@
   float: left;
 }
 
-input {
-  height: 100%;
-  border: 0;
-  padding: 0;
-  background-color: whitesmoke;
-  border-radius: 15px;
-  opacity: 0.7;
-  text-align: center;
-  font-family: "Times New Roman";
-  font-size: 120%;
 
-}
-
-input:focus {
-  opacity: 1;
-  outline: none;
-}
 
 #inputHelp{
   width: 50px;
@@ -89,3 +73,8 @@ input:focus {
   font-size: 120%;
   margin: 0;
 }
+
+ #allCocteil{
+   width: 20%;
+   margin-left: 34%;
+ }
