--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,14 +29,16 @@
       <input type="text" [ngModel]="cocteil.name_of_cocteil" #cocteilName="ngModel" required pattern="[а-яА-Я-0-9]{3,9}"
       placeholder="Название коктейля"/>
 
-      <!--<div id="inputHelp" [hidden]="cocteilName.valid || cocteilName.untouched">
-        <p class="textForBatton">Название должно содержать минимум 3 символа</p>
-      </div>-->
-
       <button class="CocteilBatton" [disabled]="cocteilName.invalid" (click)="searchCocteil(cocteilName.value);">
         <p class="textForBatton">Найти</p>
       </button>
 
+    </div>
+
+    <div id="addCocteil">
+      <button class="CocteilBatton" routerLink="/addCocteil" routerLinkActive="active">
+        <p class="textForBatton">Добавить коктейль</p>
+      </button>
     </div>
 
 
