--- a/src/styles.css
+++ b/src/styles.css
@@ -142,3 +142,20 @@ body{
   opacity: 1;
 }
 
+input {
+  height: 100%;
+  border: 0;
+  padding: 0;
+  background-color: whitesmoke;
+  border-radius: 15px;
+  opacity: 0.7;
+  text-align: center;
+  font-family: "Times New Roman";
+  font-size: 120%;
+
+}
+
+input:focus {
+  opacity: 1;
+  outline: none;
+}
