--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -41,6 +41,12 @@
       </button>
     </div>
 
+    <div id="registation">
+      <button class="CocteilBatton">
+        <p class="textForBatton">Регистрация/Вход</p>
+      </button>
+    </div>
+
 
 
   </div>
