--- a/src/app/addCocteil/addCocteil.css
+++ b/src/app/addCocteil/addCocteil.css
@@ -4,10 +4,16 @@
 }
 
 .nameDiv{
-  width: auto;
-  height: 3%;
+  width: 20%;
+  height: 5%;
   margin-top: 0%;
   text-align: center;
+  margin-left: 42%;
+  opacity: 0.7;
+}
+
+.nameDiv:hover{
+  opacity: 1;
 }
 
 #infoOfCocteil{
@@ -29,16 +35,41 @@
 }
 
 .infoCocteil{
-  margin: 0px;
   width: 100%;
   height: 100%;
-  border: 0px;
+  border: 2px solid;
+  border-color: whitesmoke;
   background: whitesmoke;
   border-radius: 10px;
   resize: none;
   font-family: "Times New Roman";
   font-size: 120%;
   text-align: center;
+  float: right;
+  line-height: 160%;
+}
+
+.addCocteilIngredient{
+  margin: 0px;
+  width: 100%;
+  height: 70%;
+  border:2px solid;
+  border-color: whitesmoke;
+  background: whitesmoke;
+  border-radius: 10px;
+  resize: none;
+  font-family: "Times New Roman";
+  font-size: 120%;
+  text-align: center;
+  float: right;
+  outline: none;
+  padding: 0;
+  line-height: 160%;
+}
+
+.addCocteilIngredient:focus{
+  outline: none;
+  background: white;
 }
 
 .infoCocteil:focus{
@@ -98,11 +129,13 @@
 
 #inputFields{
   width: auto;
-  height: 10%;
+  height: 15%;
 }
 
 .inputFieldIngredient{
-  width: 70%;
+  margin-top: 1%;
+  margin-left: 4%;
+  width: 80%;
   height: 50%;
   float: left;
 }
@@ -110,7 +143,7 @@
 #addIngridient{
   width: 7%;
   height: 100%;
-  margin-left: 85%;
+  margin-left: 89%;
   margin-top: 3%;
 }
 
@@ -119,8 +152,9 @@
 }
 
 #addedIngridient{
+  overflow-y: auto;
   width: 100%;
-  height: 40%;
+  height: 35%;
 }
 
 #tableAddedIngridients{
@@ -146,3 +180,33 @@
   text-align: center;
 }
 
+.ng-invalid:focus{
+  border-left: 0;
+  border-top-color: darkred;
+  border-right-color: red;
+  border-bottom-color: red;
+}
+
+.ng-valid{
+  border-left: 0;
+  border-color: green;
+}
+
+#message {
+  height: 2.5%;
+  width: auto;
+}
+
+#messageText {
+  width: auto;
+  height: auto;
+  background-color: black;
+  color: white;
+  text-align: center;
+  font-size: 120%;
+  margin: 0;
+}
+
+textarea{
+  border: 2px;
+}
