--- a/src/app/addCocteil/addCocteil.html
+++ b/src/app/addCocteil/addCocteil.html
@@ -1,13 +1,12 @@
 <div id="message" >
-  <p id="messageText" [hidden]="cocteilName.valid || cocteilName.untouched">Название должно содержать минимум 3 символа, только русские буквы и цифры</p>
- <!-- <p [hidden]="cocteilPreparation.valid || cocteilPreparation.untouched">Неуказан способ приготовления коктейля</p> -->
+  <p id="messageText" [hidden]="cocteilName.valid || cocteilName.untouched">Название коктейля может содержать только русские буквы и цифры</p>
 </div>
 
 <div id="table">
 
   <div class="nameDiv">
-    <input type="text" placeholder="Название коктейля" [ngModel]="cocteil.name_of_cocteil" #cocteilName="ngModel"
-           required pattern="[а-яА-Я-0-9]{3,9}" />
+    <textarea type="text" class="addCocteilIngredient" placeholder="Название коктейля" [ngModel]="cocteil.name_of_cocteil" #cocteilName="ngModel"
+           required pattern="[а-яА-Я-0-9]{3,9}"></textarea>
   </div>
 
   <div id="infoOfCocteil">
@@ -18,16 +17,23 @@
 
       <textarea class="infoCocteil" type="text" placeholder="Способ приготовления коктейля..."
                 [ngModel]="cocteil.cockteils_preparation" #cocteilPreparation="ngModel"
-                required pattern="[а-яА-Я-0-9]{3,9}"></textarea>
+                required pattern="[а-яА-Яa-zA-Z.:;,!\s]{10,500}"></textarea>
       </div>
 
       <div id="inputFields">
         <div class="inputFieldIngredient">
-          <input class="infoCocteil" type="text" placeholder="Название ингридиента" #ingredient/>
-          <input class="infoCocteil" type="text" placeholder="Количество ингридиента" #volum/>
+          <textarea class="addCocteilIngredient" type="text" placeholder="Название ингридиента"
+                 [ngModel]="cocteilIngred.name_of_ingredient" #ingredient="ngModel"
+                 required pattern="[а-яА-Яa-zA-Z]{3,10}"></textarea>
+        </div>
+        <div class="inputFieldIngredient">
+          <textarea class="addCocteilIngredient" type="text" placeholder="Количество ингридиента"
+                    [ngModel]="cocteilIngred.volum" #volum="ngModel"
+                    required pattern="[а-я.\s0-9]{4,10}">></textarea>
         </div>
         <div id="addIngridient">
-          <button class="CocteilBatton" (click)="addCocteilIngredient(ingredient.value, volum.value);">
+          <button class="CocteilBatton" (click)="addCocteilIngredient(ingredient.value, volum.value)"
+            [disabled]="ingredient.invalid || volum.invalid">
             +
           </button>
         </div>
@@ -62,11 +68,9 @@
     </div>
 
     <div class="infoHistoryDiv">
-
       <textarea class="infoCocteil" type="text" placeholder="История коктейля..."
-                #cocteilHistory
-                required pattern="[а-яА-Я-0-9]{3,9}"></textarea>
-
+                [ngModel]="cocteil.history_of_cocteil" #cocteilHistory="ngModel"
+                required pattern='[а-яА-Я-0-9-.,!?":;\sa-zA-Z]{3,1500}'></textarea>
     </div>
 
   </div>
