--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -35,7 +35,7 @@
 }
 
 #allCocteilBatton{
-  width: 15%;
+  width: 11%;
   height: 100%;
   margin-left: 1%;
   float: left;
@@ -43,11 +43,17 @@
 
 #popCocteilBatton{
   height: 100%;
-  width: 20%;
+  width: 15%;
   margin-left: 1%;
   float: left;
 }
 
+#registation{
+  width: 14%;
+  height: 100%;
+  margin-left: 1%;
+  float: left;
+}
 
 
 #inputHelp{
@@ -74,7 +80,8 @@
   margin: 0;
 }
 
- #allCocteil{
-   width: 20%;
-   margin-left: 34%;
+ #addCocteil{
+   width: 15%;
+   margin-left: 1%;
+   float: left;
  }
