--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -80,8 +80,120 @@
   margin: 0;
 }
 
- #addCocteil{
-   width: 15%;
-   margin-left: 1%;
-   float: left;
- }
+#addCocteil{
+  width: 15%;
+  margin-left: 1%;
+  float: left;
+}
+
+
+h1{
+  text-align: center;
+}
+
+#inputDiv{
+  width: 100%;
+  height: 80%;
+  margin-top: 5%;
+}
+
+#userNameDiv{
+  width: 100%;
+  height: 20%;
+  text-align: center;
+}
+
+#userPasswordDiv{
+  width: 100%;
+  height: 20%;
+  text-align: center;
+}
+
+#loginDiv{
+  width: 100%;
+  height: 20%;
+  text-align: center;
+}
+
+#registrationDiv{
+  width: 100%;
+  height: 20%;
+  text-align: center;
+}
+
+.userRegistrationInput{
+  margin: 17px;
+  width: 70%;
+  height: 45%;
+  border:2px solid;
+  border-color: whitesmoke;
+  background: whitesmoke;
+  border-radius: 10px;
+  resize: none;
+  font-family: "Times New Roman";
+  font-size: 120%;
+  text-align: center;
+  float: none;
+  outline: none;
+  padding: 0;
+  line-height: 160%;
+}
+
+.userRegistrationInput:focus{
+  outline: none;
+  background: white;
+}
+
+.userRegistrationBatton{
+  width: auto;
+  height: 50%;
+  margin: 17px;
+  background-color: whitesmoke;
+  border-radius: 15px;
+  cursor: default;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.userLoginBatton{
+  width: auto;
+  height: 50%;
+  margin: 17px;
+  background-color: whitesmoke;
+  border-radius: 15px;
+  cursor: default;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.userRegistrationBatton:focus{
+  outline: none;
+}
+
+.userLoginBatton:focus{
+  outline: none;
+}
+
+.userRegistrationBatton:hover{
+  background-color: deepskyblue;
+}
+
+.userLoginBatton:hover{
+  background-color: lawngreen;
+}
+
+.ng-invalid:focus{
+  border-left: 0;
+  border-top-color: darkred;
+  border-right-color: red;
+  border-bottom-color: red;
+}
+
+.ng-valid{
+  border-left: 0;
+  border-color: green;
+}
