--- a/src/app/cocteil-detail/cocteil.component.html
+++ b/src/app/cocteil-detail/cocteil.component.html
@@ -23,7 +23,7 @@
 
         <div id="triangle">
           <div id="textAtLike">
-            <p class="textForLike" (click)="addLike()"> {{cocteil?.like_of_cocteil}} </p>
+            <p class="textForLike" (click)="checkUser()"> {{cocteil?.like_of_cocteil}} </p>
           </div>
         </div>
         <div id="rectanglVerticale"></div>
