--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -47,6 +47,12 @@
       </button>
     </div>
 
+    <div id="logOutDiv">
+      <button *ngIf="addCocteilBatton" class="CocteilBatton" (click)="logOut();">
+        <p class="textForBatton">В</p>
+      </button>
+    </div>
+
   </div>
 
   <hr style="margin-bottom: 0">
