--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,7 +49,7 @@
 
     <div id="logOutDiv">
       <button *ngIf="addCocteilBatton" class="CocteilBatton" (click)="logOut();">
-        <p class="textForBatton">В</p>
+        <p class="textForBatton">Выход</p>
       </button>
     </div>
 
