--- a/src/app/popCocteil/popCocteil.html
+++ b/src/app/popCocteil/popCocteil.html
@@ -41,6 +41,11 @@
       </div>
     </div>
 
+    <div *ngIf="cocteil?.name_of_cocteil" id="imageCocteilDiv">
+      <!--<img id="image" src="../../images/{{cocteil?.name_of_cocteil}}.png">-->
+      <img id="image" src="../../images/Американо.png">
+    </div>
+
   </div>
 
   <div id="historyDiv">
