--- a/src/app/cocteil-detail/cocteil.component.html
+++ b/src/app/cocteil-detail/cocteil.component.html
@@ -41,6 +41,9 @@
       </div>
     </div>
 
+    <div *ngIf="cocteil?.name_of_cocteil" id="imageCocteilDiv">
+      <img id="image" src="../../images/{{cocteil?.name_of_cocteil}}.png">
+    </div>
 
   </div>
 
