--- a/src/app/cocteil-detail/cocteil.component.css
+++ b/src/app/cocteil-detail/cocteil.component.css
@@ -40,3 +40,23 @@
   border-radius: 10px;
   padding: 10px;
 }
+
+#imageCocteilDiv{
+  width: 37.5%;
+  height: 55%;
+  text-align: center;
+  position: absolute;
+  bottom: 17%;
+}
+
+#image{
+  width: 50%;
+  -ms-interpolation-mode: nearest-neighbor;
+  image-rendering: -webkit-optimize-contrast;
+  image-rendering: -moz-crisp-edges;
+  image-rendering: pixelated;
+  margin-left: 25%;
+  position: absolute;
+  bottom: 0;
+  display: block;
+}
