--- a/src/app/popCocteil/popCocteil.css
+++ b/src/app/popCocteil/popCocteil.css
@@ -42,16 +42,22 @@
 }
 
 #imageCocteilDiv{
-  width: auto;
-  height: auto;
-  margin-top: 30%;
+  width: 37.5%;
+  height: 55%;
   text-align: center;
+  position: absolute;
+  bottom: 17%;
 }
 
 #image{
-  width: 60%;
+  width: 50%;
+  -ms-interpolation-mode: nearest-neighbor;
+  image-rendering: -webkit-optimize-contrast;
+  image-rendering: -moz-crisp-edges;
   image-rendering: pixelated;
-  margin: 0 auto;
+  margin-left: 25%;
+  position: absolute;
+  bottom: 0;
   display: block;
 }
 
