--- a/src/app/popCocteil/popCocteil.html
+++ b/src/app/popCocteil/popCocteil.html
@@ -42,8 +42,7 @@
     </div>
 
     <div *ngIf="cocteil?.name_of_cocteil" id="imageCocteilDiv">
-      <!--<img id="image" src="../../images/{{cocteil?.name_of_cocteil}}.png">-->
-      <img id="image" src="../../images/Американо.png">
+      <img id="image" src="../../images/{{cocteil?.name_of_cocteil}}.png">
     </div>
 
   </div>
