--- a/src/app/cocteil-detail/cocteil.component.html
+++ b/src/app/cocteil-detail/cocteil.component.html
@@ -28,7 +28,7 @@
         </div>
         <div *ngIf="imageLakeAdd" id="triangleAdd" >
           <div class="textAtLike">
-            <p class="textForLike" (click)="addLike()"> {{cocteil?.like_of_cocteil}} </p>
+            <p class="textForLikeAdd" (click)="addLike()"> {{cocteil?.like_of_cocteil}} </p>
           </div>
         </div>
         <div id="rectanglVerticale"></div>
