--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,7 @@ body{
   background: url("images/1.jpg") no-repeat;
   background-size: cover;
   background-color: black;
+  overflow: hidden;
 }
 
 .nameCocteil{
