--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -21,16 +21,26 @@
   user-select: none;
 }
 
+#navigationDiv {
+  width:100%;
+  height: 5%;
+}
+
 #battons {
   width: auto;
-  height: 3%;
+  height: 60%;
   vertical-align: middle;
 }
 
 #searechCocteil {
   height: 100%;
-  margin-right: 1%;
   width: auto;
+  float: left;
+}
+
+#searechCocteilBatton {
+  height: 100%;
+  width: max-content;
   float: right;
 }
 
@@ -51,8 +61,13 @@
 #registation{
   width: 14%;
   height: 100%;
-  margin-left: 1%;
-  float: left;
+  float: right;
+}
+
+#logOutDiv{
+  height: 100%;
+  width: max-content;
+  float: right;
 }
 
 
@@ -63,21 +78,6 @@
   margin-top: 70px;
   background: whitesmoke;
   float: right;
-}
-
-#message {
-  height: 2.5%;
-  width: auto;
-}
-
-#messageText {
-  width: auto;
-  height: auto;
-  background-color: black;
-  color: white;
-  text-align: center;
-  font-size: 120%;
-  margin: 0;
 }
 
 #addCocteil{
@@ -150,11 +150,11 @@ h1{
   margin: 17px;
   background-color: whitesmoke;
   border-radius: 15px;
-  cursor: default;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  cursor: hand;
 }
 
 .userLoginBatton{
@@ -163,11 +163,11 @@ h1{
   margin: 17px;
   background-color: whitesmoke;
   border-radius: 15px;
-  cursor: default;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  cursor: hand;
 }
 
 .userRegistrationBatton:focus{
