--- a/src/styles.css
+++ b/src/styles.css
@@ -132,7 +132,7 @@ body{
 }
 
 .CocteilBatton {
-  width: auto;
+  width: 100%;
   height: 100%;
   background-color: #f5f5f5;
   opacity: .7;
@@ -168,10 +168,33 @@ input {
   text-align: center;
   font-family: "Times New Roman";
   font-size: 120%;
-
+  margin-right: 2px;
 }
 
 input:focus {
   opacity: 1;
   outline: none;
 }
+
+.message {
+  height: 2.5%;
+  width: 30%;
+  margin-left: 35%;
+  display: none;
+}
+
+.messageText {
+  width: auto;
+  height: auto;
+  background-color: whitesmoke;
+  color: black;
+  text-align: center;
+  font-size: 120%;
+  margin: 0;
+  border-radius: 7px;
+}
+
+input:focus ~ .message {
+  display: block;
+}
+
