--- a/src/app/addCocteil/addCocteil.html
+++ b/src/app/addCocteil/addCocteil.html
@@ -23,7 +23,7 @@
       <div id="inputFields">
         <div class="inputFieldIngredient">
           <textarea class="addCocteilIngredient" type="text" placeholder="Название ингридиента"
-                 [ngModel]="cocteilIngred.name_of_ingredient" #ingredient="ngModel"
+                 [ngModel]="cocteilIngred.ingredient" #ingredient="ngModel"
                  required pattern="[а-яА-Яa-zA-Z ]{3,20}"></textarea>
         </div>
         <div class="inputFieldIngredient">
