--- a/src/app/favoriteCocteils/favoriteCocteils.html
+++ b/src/app/favoriteCocteils/favoriteCocteils.html
@@ -1,5 +1,9 @@
 <div id="allCocteil">
 
+  <div *ngIf="usersCocteilsIsEmpty" id="message" >
+    <h1> Вам не понравился ни один коктейль</h1>
+  </div>
+
   <div *ngFor="let cocteils of usersCocteils"  [routerLink]="['/detail', cocteils]">
     <div id="smallView">
       <div *ngIf="cocteils" id="smallIcon">
