--- a/src/app/popCocteil/popCocteil.html
+++ b/src/app/popCocteil/popCocteil.html
@@ -7,7 +7,7 @@
   <div id="preporationDiv">
 
     <div *ngFor="let cocteil of cocteilIngred">
-      <p class="textForIngredient"> {{cocteil?.name_of_ingredient}} {{cocteil?.volum}} </p>
+      <p class="textForIngredient"> {{cocteil?.ingredient}} {{cocteil?.volum}} </p>
     </div>
 
     <div>
