--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 body{
-  background: url("images/1.jpg") no-repeat;
+  background: url("images/backgraund.jpg") no-repeat;
   background-size: cover;
   background-color: black;
   overflow: hidden;
