--- a/src/app/addCocteil/addCocteil.html
+++ b/src/app/addCocteil/addCocteil.html
@@ -70,7 +70,7 @@
     <div class="infoHistoryDiv">
       <textarea class="infoCocteil" type="text" placeholder="История коктейля..."
                 [ngModel]="cocteil.history_of_cocteil" #cocteilHistory="ngModel"
-                required pattern='[а-яА-Я-0-9-.,!?":;\sa-zA-Z]{3,2000}'></textarea>
+                required pattern='[а-яА-Я-0-9-.,!?%":;\sa-zA-Z]{3,2000}'></textarea>
     </div>
 
   </div>
