--- a/src/app/cocteil-dashboard/cocteil-dashboard.component.html
+++ b/src/app/cocteil-dashboard/cocteil-dashboard.component.html
@@ -5,7 +5,7 @@
 
       <div id="smallView">
         <div *ngIf="cocteils?.name_of_cocteil" id="smallIcon">
-          <img id="image" src="../../images/{{cocteils?.name_of_cocteil}}.png">
+          <img id="image" src="../../images/{{cocteils?.name_of_cocteil}}.png" onError="this.src='../../images/Американо.png'">
         </div>
         <div id="smallViewName">
           <p>{{cocteils?.name_of_cocteil}}</p>
