--- a/src/app/addCocteil/addCocteil.html
+++ b/src/app/addCocteil/addCocteil.html
@@ -17,7 +17,7 @@
 
       <textarea class="infoCocteil" type="text" placeholder="Способ приготовления коктейля..."
                 [ngModel]="cocteil.cockteils_preparation" #cocteilPreparation="ngModel"
-                required pattern="[а-яА-Яa-zA-Z.:;,!\s()<<>>]{10,500}"></textarea>
+                required pattern='[а-яА-Яa-zA-Z.":;,!\s()]{10,500}'></textarea>
       </div>
 
       <div id="inputFields">
@@ -29,7 +29,7 @@
         <div class="inputFieldIngredient">
           <textarea class="addCocteilIngredient" type="text" placeholder="Количество ингридиента"
                     [ngModel]="cocteilIngred.volum" #volum="ngModel"
-                    required pattern="[а-я.\s0-9]{0,15}">></textarea>
+                    required pattern="[а-я.\s0-9/-]{0,15}">></textarea>
         </div>
         <div id="addIngridient">
           <button class="CocteilBatton" (click)="addCocteilIngredient(ingredient.value, volum.value)"
@@ -70,7 +70,7 @@
     <div class="infoHistoryDiv">
       <textarea class="infoCocteil" type="text" placeholder="История коктейля..."
                 [ngModel]="cocteil.history_of_cocteil" #cocteilHistory="ngModel"
-                required pattern='[а-яА-Я-0-9-.,!?%":;\sa-zA-Z]{3,2000}'></textarea>
+                required pattern='[а-яА-Я-0-9-.,!?%/()":;\sa-zA-Z]{3,2000}'></textarea>
     </div>
 
   </div>
