--- a/src/app/cocteil-detail/cocteil.component.html
+++ b/src/app/cocteil-detail/cocteil.component.html
@@ -47,10 +47,12 @@
 
   </div>
 
-  <div id="historyDiv">
-    <p class="textForCocteil">
-      {{cocteil?.history_of_cocteil}}
-    </p>
+  <div id="historyOutDiv">
+    <div id="historyDiv">
+      <p class="textForCocteil">
+        {{cocteil?.history_of_cocteil}}
+      </p>
+    </div>
   </div>
 
 </div>
