--- a/src/app/cocteil-detail/cocteil.component.css
+++ b/src/app/cocteil-detail/cocteil.component.css
@@ -10,7 +10,7 @@
   margin-top: 0%;
 }
 
-#historyDiv{
+#historyOutDiv{
   height: 90%;
   width: 30%;
   margin-top: 0%;
@@ -23,11 +23,16 @@
   overflow-y: auto;
 }
 
-#historyDiv:hover{
+#historyOutDiv:hover{
   background: white;
   opacity: 1;
 }
 
+#historyDiv{
+  width: 100%;
+  height: 100%;
+  overflow-y: auto;
+}
 
 #imageDiv{
   height: auto;
