--- a/src/app/cocteil-dashboard/cocteil-dashboard.component.css
+++ b/src/app/cocteil-dashboard/cocteil-dashboard.component.css
@@ -1,6 +1,6 @@
 #smallView {
-  width: 170px;
-  height: 160px;
+  width: 11vw;
+  height: 16vh;
   background-color: whitesmoke;
   float: left;
   margin-left: 1%;
@@ -14,10 +14,9 @@
 }
 
 #allCocteil{
-  width: 80%;
-  height: 700px;
+  width: 100%;
+  height: 55%;
   margin-top: 1%;
-  margin-left: 10%;
 }
 
 #smallIcon{
@@ -34,7 +33,10 @@
 p {
   margin-top: 0;
   margin-bottom: 0;
-  font-size: 115%;
+  font-size: 1.5vw;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 #image{
