--- a/src/styles.css
+++ b/src/styles.css
@@ -7,40 +7,40 @@ body{
 }
 
 .nameCocteil{
-  font-size: 250%;
+  font-size: 4vh;
   color: whitesmoke;
   font-family: Algerian;
   text-align: center;
   vertical-align: middle;
-  margin-bottom: 0%;
-  margin-top: -14px;
+  margin-bottom: 0;
+  margin-top: 0;
 }
 
 .textForCocteil{
   color: #000000;
   text-align: justify;
-  font-size: 120%;
+  font-size: 2.5vh;
 }
 
 .textForIngredient{
   color: #000000;
   text-align: center;
-  font-size: 120%;
+  font-size: 2.5vh;
 }
 
 .textForBatton{
-  height: auto;
-  width: auto;
   color: #000000;
   text-align: center;
-  font-size: 120%;
+  font-size: 2.3vh;
+  font-family: "Times New Roman";
   margin: 0;
-  padding: 1px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .textForLike{
-  font-size: 120%;
-  padding-top: 20%;
+  font-size: 2.5vh;
   z-index: 100;
   margin-top: 0;
   margin-bottom: 0;
@@ -61,18 +61,18 @@ body{
 }
 
 #wineglass{
-  height: 82px;
+  width: 10%;
+  height: 100%;
   float: right;
-  margin-right: 3%;
-  margin-top: 3%;
 }
 
 #triangle {
-  width: 40px;
-  height: 40px;
-  background: whitesmoke;
+  width: 2vw;
+  height: 4vh;
   display: block;
+  background-color: whitesmoke;
   border-radius: 7% 7% 50% 50%/60% 60% 40% 40%;
+  margin: 0 auto;
 }
 
 #triangleAdd {
@@ -86,21 +86,22 @@ body{
 #rectanglVerticale {
   width: 4px;
   height: 8px;
-  margin-left: 18px;
+  margin: 0 auto;
   background-color: whitesmoke;
 }
 #rectanglHorizontal {
-  width: 30px;
-  height: 5px;
-  background-color: whitesmoke;
-  margin-left: 5px;
+  width: 1.5vw;
+  height: 0.2vh;
+  background-color: #f5f5f5;
   border-radius: 10px;
+  margin: 0 auto;
 }
 
 .textAtLike {
-  width: 40px;
-  height: 27px;
+  width: auto;
+  height: 100%;
   cursor: default;
+  margin: 0 auto;
   user-select: none;
 }
 
@@ -108,7 +109,7 @@ body{
   display:none;
   width: auto;
   height: auto;
-  margin-top: 70px;
+  margin-top: 6vh;
   background: whitesmoke;
   float: right;
 }
@@ -116,6 +117,7 @@ body{
 #comment {
   margin: 0;
   padding: 2px;
+  font-size: 2vh;
 }
 
 #triangle:hover{
@@ -128,7 +130,7 @@ body{
 
 #like{
   width: auto;
-  height: auto;
+  height: 10%;
 }
 
 .CocteilBatton {
@@ -137,7 +139,8 @@ body{
   background-color: #f5f5f5;
   opacity: .7;
   border-radius: 15px;
-  cursor: default;
+  border: 0;
+  cursor: pointer;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -167,7 +170,7 @@ input {
   opacity: 0.7;
   text-align: center;
   font-family: "Times New Roman";
-  font-size: 120%;
+  font-size: 2vh;
   margin-right: 2px;
 }
 
